packages/bun-usockets/src/libusockets.h

#define LIBUS_SOCKET_DESCRIPTOR SOCKET
#define LIBUS_SOCKET_DESCRIPTOR int
/* Library types publicly available */
struct us_socket_t;
struct us_timer_t;
struct us_socket_group_t;
struct us_listen_socket_t;
struct us_loop_t;
struct us_udp_socket_t;
/* BoringSSL/OpenSSL forward decls so the API can be typed without dragging in
 * the OpenSSL headers. These match openssl/base.h's `typedef struct ssl_ctx_st
 * SSL_CTX` / `typedef struct ssl_st SSL`. */
struct ssl_ctx_st;
struct ssl_st;
/* Creates a (heavy-weight) UDP socket with a user space ring buffer. Again, this one is heavy weight and
 * shoud be reused. One entire QUIC server can be implemented using only one single UDP socket so weight
 * is not a concern as is the case for TCP sockets which are 1-to-1 with TCP connections. */
//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*read_cb)(struct us_udp_socket_t *), unsigned short port);

//struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, struct us_udp_packet_buffer_t *, int), void (*drain_cb)(struct us_udp_socket_t *), char *host, unsigned short port);

struct us_udp_socket_t *us_create_udp_socket(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), const char *host, unsigned short port, int flags, int *err, void *user);
/* Adopts an already created (and usually already bound) UDP socket descriptor
 * instead of creating a new one. The fd is made non-blocking and the standard
 * receive-path options are applied. Returns null with *err set on failure. */
struct us_udp_socket_t *us_create_udp_socket_from_fd(us_loop_r loop, void (*data_cb)(struct us_udp_socket_t *, void *, int), void (*drain_cb)(struct us_udp_socket_t *), void (*close_cb)(struct us_udp_socket_t *), void (*recv_error_cb)(struct us_udp_socket_t *, int, int), LIBUS_SOCKET_DESCRIPTOR fd, int shared, int *err, void *user);
/* Arm a timer with a delay from now and eventually a repeat delay.
 * Specify 0 as repeat delay to disable repeating. Specify both 0 to disarm. */
void us_timer_set(struct us_timer_t *timer, void (*cb)(struct us_timer_t *t), int ms, int repeat_ms);
/* Mutable list-head + sweep state. Zero-initialise then us_socket_group_init().
 * `ext` is the owner pointer recovered by handlers (server*, app*, vm*). */
struct us_socket_group_t {
    struct us_loop_t *loop;
    const struct us_socket_vtable_t *vtable;
    void *ext;
    struct us_socket_t *head_sockets;
    struct us_connecting_socket_t *head_connecting_sockets;
    struct us_listen_socket_t *head_listen_sockets;
    struct us_socket_t *iterator;
    struct us_socket_group_t *prev, *next;
    uint32_t global_tick;
    /* Sockets currently parked in loop->data.low_prio_head with s->group == this.
     * They are NOT in head_sockets while queued, so close_all/deinit must
     * account for them separately. */
    uint16_t low_prio_count;
    unsigned char timestamp;
    unsigned char long_timestamp;
    unsigned char linked;
};
/* Same, but also attaches a fresh SSL* built from ssl_ctx (which is up_ref'd
 * for the lifetime of the socket). Used for STARTTLS / Bun.connect upgrade.
 * sni may be NULL. */
struct us_socket_t *us_socket_adopt_tls(us_socket_r s, us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx, const char *sni,
    int is_client, int request_cert, int reject_unauthorized,
    int old_ext_size, int ext_size) __attribute__((nonnull(1, 2, 4)));
/* Feed bytes that were already read off the wire (e.g. a ClientHello consumed
 * by the plain-TCP layer before the socket was adopted into TLS) through the
 * same decrypt path as bytes arriving from the kernel. */
struct us_socket_t *us_socket_tls_feed(us_socket_r s, const char *data, int length) __attribute__((nonnull(1)));
/* ── Listen ───────────────────────────────────────────────────────────────
 * The listener owns: an embedded group for accepted sockets, the SSL_CTX
 * (borrowed ref, optional), the SNI tree (optional), and the kind to stamp on
 * accepted sockets. */
struct us_listen_socket_t *us_socket_group_listen(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *host, int port, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 8)));  /* ssl_ctx, host nullable */
struct us_listen_socket_t *us_socket_group_listen_unix(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *path, size_t pathlen, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 4, 8)));  /* ssl_ctx nullable */
struct us_listen_socket_t *us_socket_group_listen_fd(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    LIBUS_SOCKET_DESCRIPTOR fd, int backlog, int options, int socket_ext_size, int *error)
    __attribute__((nonnull(1, 8)));  /* ssl_ctx nullable */
void us_listen_socket_close(struct us_listen_socket_t *ls) nonnull_fn_decl;
/* SNI: tree hangs off the listen socket. ssl_ctx is up_ref'd; user is opaque
 * (uWS stores a per-domain HttpRouter*). user may be NULL. */
int us_listen_socket_add_server_name(struct us_listen_socket_t *ls,
    const char *hostname_pattern, struct ssl_ctx_st *ssl_ctx, void *user)
    __attribute__((nonnull(1, 2, 3)));
void us_listen_socket_remove_server_name(struct us_listen_socket_t *ls,
    const char *hostname_pattern) nonnull_fn_decl;
void *us_listen_socket_find_server_name_userdata(struct us_listen_socket_t *ls,
    const char *hostname_pattern) nonnull_fn_decl;
void us_listen_socket_on_server_name(struct us_listen_socket_t *ls,
    struct ssl_ctx_st *(*cb)(struct us_listen_socket_t *, const char *hostname, int *abort_handshake, struct us_socket_t *socket)) nonnull_fn_decl;
struct us_socket_t *us_socket_group_connect_unix(us_socket_group_r group,
    unsigned char kind, struct ssl_ctx_st *ssl_ctx,
    const char *server_path, size_t pathlen, int options, int socket_ext_size)
    __attribute__((nonnull(1, 4)));  /* ssl_ctx nullable */
/* Per-SSL session sink: each resumable session reaching the new-session
 * callback is SSL_SESSION_up_ref'd and handed to on_new_session (which takes
 * ownership of that reference). on_free(owner) runs once on SSL_free. */
void us_ssl_set_session_sink(struct ssl_st *ssl, void *owner,
                             void (*on_new_session)(void *, struct ssl_session_st *),
                             void (*on_free)(void *));
/* Public interfaces for loops */

/* Returns a new event loop with user data extension */
struct us_loop_t *us_create_loop(void *hint, void (*wakeup_cb)(us_loop_r loop),
    void (*pre_cb)(us_loop_r loop), void (*post_cb)(us_loop_r loop), unsigned int ext_size);
struct us_socket_t *us_socket_close(us_socket_r s, int code, void *reason) __attribute__((nonnull(1)));
void *us_listen_socket_ext(struct us_listen_socket_t *ls) nonnull_fn_decl;
LIBUS_SOCKET_DESCRIPTOR us_listen_socket_get_fd(struct us_listen_socket_t *ls) nonnull_fn_decl;
int us_listen_socket_port(struct us_listen_socket_t *ls) nonnull_fn_decl;
struct us_socket_group_t *us_listen_socket_group(struct us_listen_socket_t *ls) nonnull_fn_decl;
struct us_socket_t *us_socket_from_fd(us_socket_group_r group, unsigned char kind, struct ssl_ctx_st *ssl_ctx, int socket_ext_size, LIBUS_SOCKET_DESCRIPTOR fd, int options, int ipc)
    __attribute__((nonnull(1)));  /* ssl_ctx nullable */